carousal bug fixed, accordion heading color need to change,one carousal fix remained, not responsive yet.

--- a/SASS/_utilities.scss
+++ b/SASS/_utilities.scss
@@ -47,18 +47,47 @@
 .my-show{
   position: relative;
 }
-.place-my-show{
-  position: absolute;
-  bottom: 15px;
-  left: 35%;
-  color: #F7F3FF;
+.my-show > img {
+  width: 240px;
+  height: auto;
   
 }
+
+.place-my-show{
+  position: absolute;
+  bottom: 30px;
+  left: 35%;
+  color: #F7F3FF;
+  // border: 2px solid white;
+
+}
+
+.place-my-show > p {
+  margin: 0;
+  text-align: start;
+  line-height: 1.30rem;
+}
+
 .circle-around-my{
   display: flex;
- align-content: center; 
-  height: 40px;
-  width: 40px;
+  justify-content: center;
+  align-items: center;
+  height: 45px;
+  width: 45px;
   border-radius: 50%;
   background-color: #F7F3FF;
+  margin-right: 15px;
 }
+
+.myimg{
+  width: 70%;
+  background-color: #F7F3FF;
+  // border-radius: 50%;
+
+  height: auto;
+}
+// .circle-around-my > img {
+//   max-width: 90px;
+//   height: auto;
+// }
+
